[metadata]
# replace with your username:
name = nanoprep 
version = 0.0.1
author = Xiaoping Li
author_email = lixiaopi@vt.edu
description = provides tools to deal with preprocessing nanopore amplicon reads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
