[metadata]
# replace with your username:
name = nanoprep 
version = 0.0.9
author = Xiaoping Li
author_email = lixiaopi@vt.edu
description = provides tools to deal with preprocessing nanopore amplicon reads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xpli2020/NanoPrep.git
project_urls =
    Bug Tracker = https://github.com/xpli2020/NanoPrep.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:
install_requires=
    pandas
    biopytho
python_requires = >=3.6
